NP-45995-scopus-import-fix-randomly-failing-test, now using scopus-auid for comparing actual contributor with expected contributor instead of sequence number.